--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>崇臻信息科技有限公司</title>
+    <title>崇臻智能科技有限公司</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
